# glib-examples

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  children.c  conanfile.txt  deadman-gio.c  deadman.c  delayed.c  gnew.c  gobject.c  gvariant.c  hello.c  meson.build
cmake/: utils.cmake
gobject-private/: main.c  my-manager.c  my-manager.h
